# offshoot

./: CLAUDE.md  LICENSE  Makefile  README.md  TRANSOSONDE_SETUP.md  VLLM_INFRASTRUCTURE_PROPOSAL.md  VLLM_SETUP_GUIDE.md  analyze_terse_results.py  analyze_test_results.py  compare_existing_results.py  data_generation_test.out  monitor_experiments.py  pyproject.toml  setup_vllm_instance.sh  test_qwen3b_loading.py  test_qwen7b_loading.py  test_qwen_loading.py  test_setup.py  transosonde_pack.md
configs/: global.yaml
configs/synthetic/: data_generation_test.yaml  qwen3b_quick_test.yaml  qwen3b_redundant_deep.yaml  qwen3b_terse_deep.yaml  qwen3b_verbose_deep.yaml  qwen7b_terse_deep.yaml  qwen_micro.yaml  qwen_quick_test.yaml  qwen_redundant.yaml  qwen_small.yaml  qwen_terse.yaml  qwen_terse_small.yaml  qwen_test.yaml  qwen_verbose.yaml  redundant.yaml  terse.yaml  test.yaml  verbose.yaml  vllm_production.yaml
docs/: HDP-clustering-with-probabilistic-gate-prior.md  cutover-experiments.md  dp-disclosure-clustering.md  full-experiment.md  sample_size_justification.md  seed-repo.md  synthetic-experiment-execution-plan.md
docs/instances/: a10s.txt
infra/vllm/: README.md
results/: downloaded.dvc
results/synthetic/: thresholds_R80.csv  thresholds_R85.csv  thresholds_R90.csv  thresholds_steps_R95.csv  viable_thresholds_R70.csv  viable_thresholds_R75.csv  viable_thresholds_R80.csv  viable_thresholds_R85.csv  viable_thresholds_R90.csv
src/common/: config.py  io.py  logging.py  rng.py  tokenize.py
src/modeling/: llm.py  run.py  vllm_isolated.py  vllm_manager.py  (+2 more)
(+34 files in other folders)
